--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -87,20 +87,20 @@ h1 {
 
 /* 1枚目のスライド */
 .slide:first-of-type {
-  background-image: url("/1.png");
+  background-image: url("202303_kadai/1.png");
   animation-name: fade;
 }
 
 /* 2枚目のスライド */
 .slide:nth-of-type(2) {
-  background-image: url("/2.png");
+  background-image: url("202303_kadai/2.png");
   animation-name: fade;
   animation-delay: 6s;
 }
 
 /* 3枚目のスライド */
 .slide:last-of-type {
-  background-image: url("/3.png");
+  background-image: url("202303_kadai/3.png");
   animation-name: fade;
   animation-delay: 12s;
 }
