--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -64,7 +64,7 @@ h1 {
   animation-iteration-count: infinite;
 }
 
-@keyframes fade {
+/* @keyframes fade {
   0% {
     opacity: 0;
     filter: blur(0.7px);
@@ -83,27 +83,24 @@ h1 {
     z-index: 0;
     opacity: 0;
   }
-}
+} */
 
-/* 1枚目のスライド */
-.slide:first-of-type {
+/* .slide:first-of-type {
   background-image: url("/1.png");
   animation-name: fade;
 }
 
-/* 2枚目のスライド */
 .slide:nth-of-type(2) {
   background-image: url("/2.png");
   animation-name: fade;
   animation-delay: 6s;
 }
 
-/* 3枚目のスライド */
 .slide:last-of-type {
   background-image: url("/3.png");
   animation-name: fade;
   animation-delay: 12s;
-}
+} */
 
 .material-symbols-outlined {
   font-size: 32px;
