--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -86,18 +86,18 @@ h1 {
 }
 
 .slide:first-of-type {
-  background-image: url("../img/1.png");
+  background-image: url("/1.png");
   animation-name: fade;
 }
 
 .slide:nth-of-type(2) {
-  background-image: url("../img/2.png");
+  background-image: url("/2.png");
   animation-name: fade;
   animation-delay: 6s;
 }
 
 .slide:last-of-type {
-  background-image: url("../img/3.png");
+  background-image: url("/3.png");
   animation-name: fade;
   animation-delay: 12s;
 }
